--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "axios": "^1.7.4",
         "react": "^18.3.0",
-        "react-dom": "^18.3.0"
+        "react-dom": "^18.3.0",
+        "react-query": "^3.39.3"
     },
     "devDependencies": {
         "@babel/core": "^7.25.2",
