--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "babel-loader": "^8.3.0",
+        "copy-webpack-plugin": "^12.0.2",
         "css-loader": "^6.5.1",
         "eslint": "^8.0.0",
         "eslint-plugin-react": "^7.27.0",
